--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <header class="page-header">
     <div class="container">
-      Телефон: +7 916 683 55 70
-      Email: deniskonovalov3@gmail.com
+      Контакты в шапке
+      <!--Телефон: +7 916 683 55 70
+      Email: deniskonovalov3@gmail.com-->
   	</div>
     </header>
 
@@ -46,8 +47,9 @@
 
     <footer class="page-footer">
     <div class="container">
-      Телефон: +7 916 683 55 70
-      Email: deniskonovalov3@gmail.com
+      Контакты в подвале
+      <!--Телефон: +7 916 683 55 70
+      Email: deniskonovalov3@gmail.com-->
     </div>
     </footer>
   </body>
